<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recipe_details_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:padding="6dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:context="com.example.lpelczar.bakingapp.fragments.RecipeDetailsFragment"
        tools:listitem="@layout/ingredient_item" />