<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/no_video_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/no_video_message" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/video_not_available"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontalHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.385"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="256dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/playerView"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/description"
                tools:layout_editor_absoluteX="5dp" />

            <TextView
                android:id="@+id/step_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/previous_step_button"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:background="#009688"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/previous_step"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent">
    </View>

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/next_step_button"
        android:layout_width="match_parent"
        android:text="@string/next_step"
        android:background="#009688"
        android:textColor="@android:color/white"
        android:layout_weight="0.5"
        android:layout_height="wrap_content" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>